# ProgrammingNotes

python lang project/Flask_Blog/: .flask_notes.kate-swp  flask_blog.py  flask_notes  forms.py  requirements.txt
python lang project/Flask_Blog/flaskblog/: __init__.py  forms.py  models.py  routes.py  site.db
python lang project/Flask_Blog/templates/: layout.html
python lang project/advance topics/: homebrewAPI.py  jsonguide.py  multiprocessing_guide.py  requestGuide.py  threading_guide.py
python lang project/chapter 1/: testCircle.py
python lang project/chapter 1/bitwise/: bitmask.py  bits (2).py
python lang project/chapter 2/: makeTreeRoot.py  subprocessTutorial.py
python lang project/chapter 2/TreeRoot/: FA.txt  FB.txt
python lang project/chapter 2/chaModules/: file_tree.py
python lang project/chapter 2/file organiser/: brainstorm.txt  fileOrganiser.py  src.py
python lang project/chapter 2/fileorganiserData/: fileInfos.py
python lang project/chapter 2/handlingFiles/: toolhire.csv  toolhire.fods  toolhire.html  toolhire.ini  toolhire.xlsx  writingIntoF.py
python lang project/chapter 3/: Managing Data.ipynb  managing_data
python lang project/chapter 3/Analizing data/: analizingData.ipynb  analyzing-itertools.ipynb  lendydata.py
python lang project/chapter 3/lendyDB/: create-lendyDB.ipynb  itemdb.dir  loandb.bak  loandb.dir
python lang project/chapter 3/lendyDB1/: create-lendyDB.ipynb  itemdb.bak  loandb.dir
python lang project/chapter 3/pickleSerialization/: usingPickle.ipynb
python lang project/chapter 3/pickleSerialization2/: items.pickle  usingPickle.ipynb
python lang project/chapter 3/shelves2/: fundata.shelve.bak  withShelve.ipynb
python lang project/chapter 3/sqlite_python/: sqlite_python.ipynb
python lang project/chapter 4/: destop_aplicattions
python lang project/chapter 4/GUI/: guiDemo1.py  guiDemo_tix.py
python lang project/chapter 5/API_tutorial/: json_guide.py
python lang project/chapter 5/lendy/: lendy.py
python lang project/chapter 5/web_programming/: easy_httpserver.py  index.html  tcp_client.py  tcp_websocket.py  xml_rpcguide.py
python lang project/chapter 6/: doctest.py  test_driven_development
python lang project/chapter 6/debugging/: exception.py  pdb_example.py
python lang project/chapter 6/large_project/: packaging.py
python lang project/kivy/: Live_coding.py  README.rst  test1.py
rustlan/CLionProjects/rustbook_notes/: CMakeLists.txt
rustlan/CLionProjects/rustbook_notes/Ownership/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/Ownership/src/: main.rs
rustlan/CLionProjects/rustbook_notes/Practices/fibonacci_num/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/Practices/fibonacci_num/src/: main.rs
rustlan/CLionProjects/rustbook_notes/Practices/temp_converter/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/Practices/temp_converter/src/: main.rs
rustlan/CLionProjects/rustbook_notes/control_flow/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/control_flow/src/: main.rs
rustlan/CLionProjects/rustbook_notes/data_types/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/data_types/src/: main.rs
rustlan/CLionProjects/rustbook_notes/funtions/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/funtions/src/: main.rs
rustlan/CLionProjects/rustbook_notes/guessing_game/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/guessing_game/src/: main.rs
rustlan/CLionProjects/rustbook_notes/variables/: Cargo.toml
rustlan/CLionProjects/rustbook_notes/variables/src/: main.rs
rustlan/rustGuide/: rustbook notes.txt
sql tutorial/draft/: .postgres_commands.txt.kate-swp  giraffe Session.sql  postgres_commands.txt  sqlTurorial  sqlTurorial.txt
sql tutorial/mySaving/: savingAnalizer.py
sqlite/: employee.db  employee.sql  load_employee.sql
udemy_nan/class-demos/: demo.py  flask_app.py
(+35 files in other folders)
