cmake_minimum_required(VERSION 3.15)
project(rustbook_notes)

set(CMAKE_CXX_STANDARD 14)

add_executable(rustbook_notes
        data_types/src/main.rs
        data_types/target/debug/deps/data_types-257e8842d07cdcf9
        data_types/target/debug/deps/data_types-257e8842d07cdcf9.d
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/19nm1ul51pap84j6.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/1bk38ol4js45kwme.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/1lwa8h31pmg4vsoy.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/2z22dr7u1t205qga.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/3b6huvoqrd0zo243.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/44a9m65e1rw60ncg.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/4rf7fcdscvndqx68.o
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/dep-graph.bin
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/query-cache.bin
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62-14k4ab3miqcf7/work-products.bin
        data_types/target/debug/incremental/data_types-3m2xc6i4jm7x7/s-fl0m5o3y06-1ehzl62.lock
        data_types/target/debug/data_types
        data_types/target/debug/data_types.d
        data_types/Cargo.lock
        data_types/Cargo.toml
        funtions/src/main.rs
        funtions/Cargo.lock
        funtions/Cargo.toml
        variables/src/main.rs
        variables/target/debug/deps/RustBookNotes-69638293f95580e1
        variables/target/debug/deps/RustBookNotes-69638293f95580e1.d
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/1d3odlrbj0ve6rp9.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/1hcwsckma26024sl.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/1jqak1p8zr5jvsfe.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/2jlqzbsm3p3694a4.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/4bmwuu3rvtwo284f.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/4hqo2a4ilsc3qv64.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/4jli60dzlppe8der.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/4mfhwlxv6l2m6wgr.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/6qt2yo4k6lqm2fh.o
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/dep-graph.bin
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/query-cache.bin
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e-1xtl08pbq89ed/work-products.bin
        variables/target/debug/incremental/RustBookNotes-ooos01cvfuck/s-fklqcbrvzc-tl070e.lock
        variables/target/debug/RustBookNotes
        variables/target/debug/RustBookNotes.d
        variables/Cargo.lock
        variables/Cargo.toml)
